--- a/index.html
+++ b/index.html
@@ -197,6 +197,12 @@
               </div>
             </a>
 
+            <a href="Messtechnik/index.html" class="frontPageBoxlinks">
+              <div class="boxlink">
+                <h3>Messtechnik</h3>
+              </div>
+            </a>
+
             <a href="Divers/index.html" class="frontPageBoxlinks">
               <div class="boxlink">
                 <h3>Divers</h3>
