--- a/changeLog.html
+++ b/changeLog.html
@@ -118,6 +118,28 @@
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
             <h3>Update 47</h3>
+            <time>.11.2023</time>
+            <ul>
+              <li class="changeLogText">Neit Fach: Messtechnik</li>
+              <li class="changeLogText">
+                Neit Kapitel an der Messtechnik: Messtechnik
+              </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Digitaltechnik: Codes, Minimierung und
+                Schaltungsentwurf, Schaltnetze, Bool'sche Algebra
+              </li>
+              <li class="changeLogText">
+                Nei Exercicer: <br />
+                Fonction exponentielle, Functions, Complex Numbers
+              </li>
+              <li class="changeLogText">Ergänzungen am Kapitel: Intégration</li>
+              <li class="changeLogText">Ergänzungen am Kaptiel: Impuls</li>
+              <li class="changeLogText">
+                Ergänzungen an den Exercicer: <br />
+                Logarithme népérien 2, Nombre complexes
+              </li>
+            </ul>
+            <h3>Update 47</h3>
             <time>3.11.2023</time>
             <ul>
               <li class="changeLogText">
