--- a/Elektrotechnik/index.html
+++ b/Elektrotechnik/index.html
@@ -108,6 +108,14 @@
           <a href="transistor.html" class="indexLink">Transistor</a>
         </li>
       </ol>
+      <!-- <h2>Digitaltechnik</h2>
+      <ol>
+        <li>
+          <a href="minimierungUndSchaltungsentwurf.html" class="indexLink"
+            >Minimierung und Schaltungsentwurf</a
+          >
+        </li>
+      </ol> -->
     </div>
   </body>
 </html>
