--- a/Informatik/index.html
+++ b/Informatik/index.html
@@ -57,7 +57,7 @@
           <a href="latexBasics.html" class="indexLink">LATEX Basics</a>
         </li>
       </ol>
-      <h2>Technische Informatik</h2>
+      <h2>Digitaltechnik</h2>
       <ol>
         <li>
           <a href="grundlagenDerDigitaltechnik.html" class="indexLink"
@@ -68,6 +68,9 @@
           <a href="zahlensystemeDerInformatik.html" class="indexLink"
             >Zahlensysteme der Informatik</a
           >
+        </li>
+        <li>
+          <a href="codes.html" class="indexLink">Codes</a>
         </li>
       </ol>
       <hr />
