--- a/changeLog.html
+++ b/changeLog.html
@@ -117,19 +117,28 @@
             <h2>Ännerungen</h2>
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
+            <!-- <h3>Update 48</h3>
+            <time>16.11.2023</time>
+            <ul>
+              <li class="changeLogText">
+                Nei Kapitelen an der Elektrotechnik: Minimierung und
+                Schaltungsentwurf, Schaltnetze
+              </li>
+            </ul> -->
+
             <h3>Update 48</h3>
-            <time>.11.2023</time>
+            <time>16.11.2023</time>
             <ul>
               <li class="changeLogText">Neit Fach: Messtechnik</li>
               <li class="changeLogText">
                 Neit Kapitel an der Messtechnik: Messtechnik
               </li>
               <li class="changeLogText">
-                Neit Kapitel an der Mathé: Tableau de primitives de fonctions
+                Neit Kapitel an der Mathé: Tableau des primitives de fonctions
               </li>
+              <li class="changeLogText">Ännerungen an dem Fach: Informatik</li>
               <li class="changeLogText">
-                Neit Kapitel an der Digitaltechnik: Codes, Minimierung und
-                Schaltungsentwurf, Schaltnetze, Bool'sche Algebra
+                Neit Kapitel an der Informatik: Codes, Bool'sche Algebra
               </li>
               <li class="changeLogText">
                 Nei Exercicer: <br />
@@ -141,6 +150,7 @@
                 Ergänzungen an den Exercicer: <br />
                 Logarithme népérien 2, Nombre complexes
               </li>
+              <li class="changeLogText">Feeler am Search gouf verbessert.</li>
               <li class="changeLogText">Nei Spréch!</li>
             </ul>
             <h3>Update 47</h3>
