--- a/Archiv/Physik/index.html
+++ b/Archiv/Physik/index.html
@@ -18,9 +18,9 @@
     <my-navigator></my-navigator>
     <div class="main-wrapper">
       <h1>Archiv</h1>
-      <h2 class="uppercase">Exercicer</h2>
-      <hr />
       <h2>Physik</h2>
+      <hr />
+      <h2 class="uppercase">Exercicer</h2>
       <ol>
         <li>
           <p><u>Quantenmechanik</u></p>
@@ -74,6 +74,20 @@
             </li>
             <li>
               <a href="pdf/Wellenoptik/Duenne Schichten.pdf">Dünne Schichten</a>
+            </li>
+          </ul>
+        </li>
+      </ol>
+      <hr />
+      <h2>Dokumenter</h2>
+      <ol>
+        <li>
+          <p><u>Sonnensystem</u></p>
+          <ul>
+            <li>
+              <a href="pdf/Sonnensystem/Sonnensystem.pdf"
+                >Sonnensystem Tabelle</a
+              >
             </li>
           </ul>
         </li>
