--- a/Physik/index.html
+++ b/Physik/index.html
@@ -126,6 +126,16 @@
         </li>
       </ol>
 
+      <hr />
+      <h2>Tabellen</h2>
+      <ul>
+        <li>
+          <a href="sonnensystemTabelle.html" class="indexLink"
+            >Sonnensystem Tabelle</a
+          >
+        </li>
+      </ul>
+
       <h3>Bemierkung</h3>
       <p>
         Sortéiert no
