--- a/changeLog.html
+++ b/changeLog.html
@@ -145,12 +145,20 @@
                 Fonction exponentielle, Functions, Complex Numbers
               </li>
               <li class="changeLogText">Ergänzungen am Kapitel: Intégration</li>
-              <li class="changeLogText">Ergänzungen am Kaptiel: Impuls</li>
+              <li class="changeLogText">
+                Neit Kapitel an der Physik: Sonnensystem Tabelle
+              </li>
+              <li class="changeLogText">
+                Ergänzungen am Kaptiel: Impuls, Gravitation
+              </li>
               <li class="changeLogText">
                 Ergänzungen an den Exercicer: <br />
                 Logarithme népérien 2, Nombre complexes
               </li>
               <li class="changeLogText">Feeler am Search gouf verbessert.</li>
+              <li class="changeLogText">
+                Tabellen ginn elo ganz ugewiesen amplaaz nëmmen ee bessen
+              </li>
               <li class="changeLogText">Nei Spréch!</li>
             </ul>
             <h3>Update 47</h3>
