--- a/Messtechnik/messtechnik.html
+++ b/Messtechnik/messtechnik.html
@@ -193,6 +193,36 @@
           <p>Dynamik unter Einbeziehung des Signalrauschens</p>
         </li>
       </ul>
+      <h2>Kennlinie</h2>
+      <ol>
+        <li>
+          <p><u>Arbeitsbereiche</u></p>
+          <p>
+            Abschnitte der Kennlinie mit charackteristischem nutzbaren Verlauf
+            sind streng monoton, linear, logarithmisch,...
+          </p>
+        </li>
+        <li>
+          <p><u>Empfindlichkeit</u></p>
+          <p>
+            Durch Änderung der Eingangsgröße hervorgerufene Änderung der
+            Ausgangsgröße.
+          </p>
+          $$ Steigung: \frac{\Delta X_a}{\Delta X_e} $$
+        </li>
+        <li>
+          <p><u>Lineraität</u></p>
+          <p>
+            Maß für die Proportionalität zwischen Eingangsgröße und
+            Ausgangsgröße.
+          </p>
+        </li>
+      </ol>
+      <h2>Linearisierung von nichtlinearen Kennlinien</h2>
+      <p>
+        Hat man eine nichtlineare Kennlinie und möchte diese linearisieren so
+        muss eine <u>Taylorreihenentwicklung</u> vorgenommen werden, wobei Terme
+      </p>
       <h2>Akkuratheit und Präzision</h2>
       <img
         src="img/Messtechnik/akkuratheitUndPraezision.png"
