--- a/Physik/kinematik.html
+++ b/Physik/kinematik.html
@@ -5,6 +5,8 @@
     <meta name="author" content="Niederkorn Damon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="../assets/insertChapterHTML.js"></script>
+    <script src="../assets/mathJax.js"></script>
+
     <script
       type="text/javascript"
       id="MathJax-script"
@@ -25,8 +27,8 @@
       <h2>Trägheitsprinzip</h2>
       <h3>Definition</h3>
       <p>
-        Ein sich selbst überlassener Körper bewegt sich ohne äu&beta;ere
-        Einwirkung geradlining gleichförmig oder bleibt in Ruhe.
+        Ein sich selbst überlassener Körper bewegt sich ohne äußere Einwirkung
+        geradlining gleichförmig oder bleibt in Ruhe.
       </p>
       <h2>Inertialsysteme</h2>
       <h3>Definition</h3>
@@ -53,6 +55,7 @@
       <h3>Einheit</h3>
       $$ \left[ v\right] =\frac{m}{s} $$
       <h2>Durchschnittsgeschwindigkeit</h2>
+      <h3>Definition</h3>
       <p>
         Die Durchschnittsgeschwindigkeit wird bestimmt, indem der gesamte
         zurückgelegte Weg \( s \) durch die dafür benötigte Zeit \( t \) geteilt
@@ -61,6 +64,7 @@
       <h3>Formel</h3>
       $$ \bar{v} =v_{d}=\frac{s}{t} $$
       <h2>Momentangeschwindigkeit</h2>
+      <h3>Definition</h3>
       <p>
         Die Momentangeschwindigkeit ist die mittlere Geschwindigkeit in einem
         sehr kurzen Weg - und Zeitintervall.
@@ -68,6 +72,7 @@
       <h3>Formel</h3>
       $$ v= \frac{ds}{dt}$$
       <h2>Beschleunigung, Verzögerung</h2>
+      <h3>Definition</h3>
       <p>
         Die Beschleunigung oder Verzögerung ist das konstante ändern der
         Geschwindigkeit \( \Delta v \) über einen Zeitraum \( \Delta t \).
@@ -90,11 +95,37 @@
       </p>
 
       $$s=v \cdot t $$ $$ v=konstant$$ $$ a=0 $$
-      <h2>Gradlinig gleichmä&beta;ig beschleunigte Bewegung</h2>
+      <h2>Gradlinig gleichförmig beschleunigte Bewegung</h2>
 
       <p>Beschleunigung ändert sich der Geschwindigkeit pro Zeiteinheit.</p>
       $$ s= \frac{1}{2} \cdot a \cdot t^{2} + v_0 \cdot t $$ $$ v = a \cdot t +
       v_0$$ $$ a=konstant $$
+      <h2>Torricelli-Formel</h2>
+      <h3>Herleitung</h3>
+      <p>
+        Die Gleichung, welche im folgenden hergeleitet wird, dient zu
+        Berechnungen, wenn die Zeit $t$ nicht bekannt ist. Sie wird aus den
+        Gleichungen eliminiert.
+      </p>
+      <p>Weg-Zeit-Gesetz:</p>
+      $$ s = v_0 \cdot t + \frac{1}{1} \cdot a \cdot t^2\ (1) $$
+      <p>Geschwindigkeit-Zeit-Gesetz:</p>
+      $$ v = v_0 + a \cdot t $$
+      <p>
+        Aus dem Geschwindigkeit-Zeit-Gesetz $(2)$ erhalten wir nach $t$
+        umgestellt:
+      </p>
+      $$ t = \frac{v-v_0}{a}\ (3) $$
+      <p>$(3)$ in $(1)$:</p>
+      $$ s = v_0 \cdot \frac{v-v_0}{a} + \frac{1}{1} \cdot a \cdot
+      \left(\frac{v-v_0}{a} \right)^2 $$ $$ \Leftrightarrow s=\frac{v\cdot
+      v_{0}-v^{2}_{0}}{a} +\frac{1}{2} \cdot a\cdot \frac{v^{2}-2v\cdot
+      v_{0}+v^{2}_{0}}{a^{2}} $$ $$ \Leftrightarrow s=\frac{2v\cdot
+      v_{0}-2v^{2}_{0}+v^{2}-2v\cdot v_{0}+v^{2}_0}{2a} $$ $$ \Leftrightarrow
+      s=\frac{v^{2}-v^{2}_{0}}{2a} $$ $$ \Leftrightarrow v^{2}-v^{2}_{0}=2\cdot
+      a\cdot s$$
+      <h3>Formel</h3>
+      $$ v^{2}-v^{2}_{0}=2\cdot a\cdot s$$
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
