--- a/Programmen/index.html
+++ b/Programmen/index.html
@@ -46,6 +46,11 @@
             >Fonctions du deuxieme degree</a
           >
         </li> -->
+        <li>
+          <a href="wessenschaflter.html" class="indexLink"
+            >Wichteg dichteg Wëssenschaftler</a
+          >
+        </li>
       </ol>
     </div>
   </body>
