--- a/changeLog.html
+++ b/changeLog.html
@@ -127,18 +127,23 @@
             </ul> -->
 
             <h3>Update 48</h3>
-            <time>16.11.2023</time>
+            <time>17.11.2023</time>
             <ul>
               <li class="changeLogText">Neit Fach: Messtechnik</li>
               <li class="changeLogText">
                 Neit Kapitel an der Messtechnik: Messtechnik
               </li>
               <li class="changeLogText">
+                Neit Programm: Wichteg dichteg Wëssenschaftler, mat 50
+                Wëssenschaftler
+              </li>
+              <li class="changeLogText">
                 Neit Kapitel an der Mathé: Tableau des primitives de fonctions
               </li>
               <li class="changeLogText">Ännerungen an dem Fach: Informatik</li>
+              <li class="changeLogText">Ännerungen am: Read Me</li>
               <li class="changeLogText">
-                Neit Kapitel an der Informatik: Codes, Bool'sche Algebra
+                Neit Kapitel an der Informatik: Codes
               </li>
               <li class="changeLogText">
                 Nei Exercicer: <br />
@@ -149,7 +154,7 @@
                 Neit Kapitel an der Physik: Sonnensystem Tabelle
               </li>
               <li class="changeLogText">
-                Ergänzungen am Kaptiel: Impuls, Gravitation
+                Ergänzungen am Kaptiel: Impuls, Gravitation, Kinematik
               </li>
               <li class="changeLogText">
                 Ergänzungen an den Exercicer: <br />
