--- a/readme.html
+++ b/readme.html
@@ -90,6 +90,22 @@
               d'Printfunktioun benotzt. D'Formelen ginn nämlech nach mat der
               Faarw vum Stil ugewisen.
             </p>
+            <article>
+              <h2>Installeiere vu Luxformel op macOS Sonoma</h2>
+              <div class="hello">
+                <p>
+                  Säit macOS 14.1 Sonoma, kënnt Dir ee Site am Dock späicheren.
+                  Ënnen gesi Dir eng Foto vum Prozess. Dir musst juste op File
+                  drécken an dann op Add to Dock....
+                </p>
+
+                <img
+                  src="PWA/pwaTutorial/sonomaImage.png"
+                  alt=""
+                  class="tutorial"
+                />
+              </div>
+            </article>
             <article class="borderInstall">
               <h2>Wéi installéieren ech luxformel op engem Computer?</h2>
               <div class="hello">
