--- a/Archiv/Mathe/index.html
+++ b/Archiv/Mathe/index.html
@@ -61,6 +61,11 @@
                 >Nombres Complexes</a
               >
             </li>
+            <li>
+              <a href="pdf/Nombres Complexes/Complex Numbers.pdf"
+                >Complex Numbers</a
+              >
+            </li>
           </ul>
         </li>
         <li>
@@ -82,6 +87,16 @@
             <li>
               <a href="pdf/Logarithme Neperien/Logarithme Neperien 2.pdf">
                 Logarithme Népérien 2</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li>
+          <p><u>Fonction Exponentielle</u></p>
+          <ul>
+            <li>
+              <a href="pdf/Fonction Exponentielle/Fonction Exponentielle.pdf"
+                >Fonction Exponentielle</a
               >
             </li>
           </ul>
