--- a/Informatik/codes.html
+++ b/Informatik/codes.html
@@ -48,6 +48,9 @@
         </li>
         <li>
           <p><u>Bewertbarkeit:</u></p>
+          <p>
+            Die Bewertbarkeit gibt an, ob jede Stelle eine feste Wertigkeithat.
+          </p>
         </li>
         <li>
           <p><u>Gewicht:</u></p>
@@ -65,7 +68,10 @@
         gesicherten Datenübertragung oder Datenspeicherung verwendet wird.
       </p>
       <h2>Hamming-Distanz</h2>
-      <p>Die Hamming-Distanz bezieht sich je aufeinanderfolgende Codewörter.</p>
+      <p>
+        Unter dem Hamming-Abstand eines Codes versteht man das Minimum aller
+        Abstände zwischen verschiedenen Wörtern innerhalb des Codes.
+      </p>
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
