--- a/Messtechnik/messtechnik.html
+++ b/Messtechnik/messtechnik.html
@@ -222,6 +222,8 @@
       <p>
         Hat man eine nichtlineare Kennlinie und möchte diese linearisieren so
         muss eine <u>Taylorreihenentwicklung</u> vorgenommen werden, wobei Terme
+        höherer Ordnung vernachlässigbar sind wenn die Differenzen der zu
+        messenden Punkte ausreichend klein sind.
       </p>
       <h2>Akkuratheit und Präzision</h2>
       <img
