--- a/changeLog.html
+++ b/changeLog.html
@@ -127,7 +127,7 @@
             </ul> -->
 
             <h3>Update 48</h3>
-            <time>17.11.2023</time>
+            <time>19.11.2023</time>
             <ul>
               <li class="changeLogText">Neit Fach: Messtechnik</li>
               <li class="changeLogText">
@@ -147,7 +147,7 @@
               </li>
               <li class="changeLogText">
                 Nei Exercicer: <br />
-                Fonction exponentielle, Functions, Complex Numbers
+                Fonction exponentielle, Complex Numbers
               </li>
               <li class="changeLogText">Ergänzungen am Kapitel: Intégration</li>
               <li class="changeLogText">
