--- a/readme.html
+++ b/readme.html
@@ -90,7 +90,7 @@
               d'Printfunktioun benotzt. D'Formelen ginn nämlech nach mat der
               Faarw vum Stil ugewisen.
             </p>
-            <article>
+            <article class="borderInstall">
               <h2>Installeiere vu Luxformel op macOS Sonoma</h2>
               <div class="hello">
                 <p>
