--- a/changeLog.html
+++ b/changeLog.html
@@ -125,6 +125,11 @@
                 Schaltungsentwurf, Schaltnetze
               </li>
             </ul> -->
+            <h3>Update 49</h3>
+            <time>20.11.2023</time>
+            <ul>
+              <li class="changeLogText">Feeler am Archiv si verbessert ginn</li>
+            </ul>
 
             <h3>Update 48</h3>
             <time>19.11.2023</time>
