--- a/Physik/index.html
+++ b/Physik/index.html
@@ -53,7 +53,7 @@
           >
         </li>
         <li>
-          <a href="formelsammlungWürfe.html" class="indexLink"
+          <a href="formelsammlungWuerfe.html" class="indexLink"
             >Formelsammlung Würfe</a
           >
         </li>
