--- a/changeLog.html
+++ b/changeLog.html
@@ -117,7 +117,7 @@
             <h2>Ännerungen</h2>
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
-            <!-- <h3>Update 48</h3>
+            <!-- <h3>Update 49</h3>
             <time>16.11.2023</time>
             <ul>
               <li class="changeLogText">
@@ -125,6 +125,14 @@
                 Schaltungsentwurf, Schaltnetze
               </li>
             </ul> -->
+            <h3>Update 50</h3>
+            <time>16.1.2024</time>
+            <ul>
+              <li class="changeLogText">
+                De Link vu Formelsammlung Würfe, geet elo erem
+              </li>
+              <li class="changeLogText">Nei Spréch!</li>
+            </ul>
             <h3>Update 49</h3>
             <time>20.11.2023</time>
             <ul>
