--- a/changeLog.html
+++ b/changeLog.html
@@ -129,7 +129,7 @@
             <time>16.1.2024</time>
             <ul>
               <li class="changeLogText">
-                De Link vu Formelsammlung Würfe, geet elo erem
+                De Link vu Formelsammlung Würfe, geet elo erëm
               </li>
               <li class="changeLogText">Nei Spréch!</li>
             </ul>
