--- a/changeLog.html
+++ b/changeLog.html
@@ -125,6 +125,14 @@
                 Schaltungsentwurf, Schaltnetze
               </li>
             </ul> -->
+            <h3>Update 51</h3>
+            <time>16.3.2024</time>
+            <ul>
+              <li class="changeLogText">
+                Verbesserungen vu Feeler am Read Me an Ergänzungen
+              </li>
+              <li class="changeLogText">Nei Spréch!</li>
+            </ul>
             <h3>Update 50</h3>
             <time>16.1.2024</time>
             <ul>
