--- a/readme.html
+++ b/readme.html
@@ -24,7 +24,7 @@
               verbessert ginn.
             </p>
             <p class="block">
-              Ech wëll preziséieren dass dëse Site een Hobby ass an amfong mir
+              Ech wëll preziséieren dass dëse Site een Hobby ass an am Fong mir
               perséinlech eppes brenge sollt, mä ech hu mech decidéiert wat ech
               hei maan fir Jiddereen accesibel ze maan.
             </p>
@@ -32,8 +32,8 @@
             <p class="block">
               STEM Fächer kenne schwéier sinn fir ze léieren an se ginn oft
               nemmen a Schoulen gehaalen. De Firwels sech awer fir déi Themen ze
-              interesséieren sollt keng limiten hunn an net exclusiv sinn zu
-              enger Zäit an engem sengem Liewen. Jiddereen sollt d'Méigelegkeet
+              interesséieren sollt keng Limiten hunn an net exklusiv sinn zu
+              enger Zäit an engem sengem Liewen. Jiddereen sollt d'Méiglechkeet
               hunn sech zu all Zäitpunkt informéieren ze kennen an dat op eng
               simpel Art a weis.
             </p>
@@ -42,7 +42,7 @@
               D'Printfunktion ass ofhängeg vun Ärem Browser den Dir benotzt. Dat
               well heeschen dass versidde Browseren eng anner
               <q>fit content</q> Astelung hunn. Fir dei beschte Resultater ass
-              et recommandéiert dei Astellungen an der Dialog-Box selwer an ze
+              et recommandéiert déi Astellungen an der Dialog-Box selwer an ze
               stellen.
             </p>
             <h3>Problem</h3>
@@ -51,18 +51,18 @@
               FireFox gebugged. De Site gett an engem Chromium baséierte Browser
               Programméiert (Brave) et ass recommandéiert dass Dir och ee
               Chromium Browser Benotzt also all Browser ausser : FireFox oder
-              Safari, fir déi beschten <q>Print</q> Funktioun. Obwohl Safri bis
+              Safari, fir déi beschten <q>Print</q> Funktioun. Obwuel Safri bis
               ewell keng Problemer huet.
             </p>
             <h2>Feedback</h2>
             <p class="block">
-              Ech bieden Ierch Äre Feedback op déi ennen E-mail ze schecken fir
-              dass dëse Site zu eppes gett wat ëmmer an ëmmer méi relevant fir
-              esou vill wéi méigeleg Leit gett.<br />
+              Ech bieden Ierch Äre Feedback op déi ënnen verlinkten Email ze
+              schecken fir dass dëse Site zu eppes gett wat ëmmer an ëmmer méi
+              relevant fir esou vill wéi méigeleg Leit gett.<br />
               Ech wënschen eng 'bonne lecture'.
             </p>
             <p>
-              E-mail:
+              Email:
               <a href="mailto:feedback@luxformel.info"
                 >feedback@luxformel.info</a
               >
@@ -71,13 +71,13 @@
             <p class="block">
               D'Archiv wei den Numm et scho seet soll wichteg Informatiounen déi
               net onbedingt de Site passen späicheren. PDF - Dokumenter sinn
-              dofir ee gudd Beispill. Tabellen si gudd op enger Säit fir
+              dofir ee gutt Beispill. Tabellen si gutt op enger Säit fir
               nozekucken mä ee PDF - Dokument mecht dei Saach méi einfach andems
               et direkt scho preparéiert ass fir benotzt ze ginn.
             </p>
             <h2>Astellungen</h2>
             <p class="block">
-              D'Astellungen späicheren är Prefernzen an dem Browser, an engem
+              D'Astellungen späicheren Är Prefernzen an dem Browser, an engem
               Deel den <q>localstorage</q> heescht. Är Astellungen vu luxformel
               bleiwen also bei refreshing, oder zou maache vum Browser erhaalen.
               <br />
@@ -85,13 +85,13 @@
             </p>
             <h3>Problem</h3>
             <p class="block">
-              D'Printfunktioun gett leider duerch är Astellungen vun dem Stil
+              D'Printfunktioun gett leider duerch Är Astellungen vun dem Stil
               beaflosst. Et ass récommandéiert dass dir mat dem <q>Hell</q> Stil
               d'Printfunktioun benotzt. D'Formelen ginn nämlech nach mat der
               Faarw vum Stil ugewisen.
             </p>
             <article class="borderInstall">
-              <h2>Installeiere vu Luxformel op macOS Sonoma</h2>
+              <h2>Installéiere vu Luxformel op macOS Sonoma</h2>
               <div class="hello">
                 <p>
                   Säit macOS 14.1 Sonoma, kënnt Dir ee Site am Dock späicheren.
@@ -128,7 +128,7 @@
                 />
                 <p>
                   Wann der op den Download-Knäppchen gedréckt hutt misst eng
-                  Dialog-Box opdauchen, déi ierch virschléit luxformel ze
+                  Dialog-Box opdauchen, déi Ierch virschléit luxformel ze
                   installéieren. Dréckt op <q>Install</q>.
                 </p>
                 <img
@@ -148,17 +148,27 @@
               </div>
             </article>
 
+            <h2>PWA op iOS an iPadOS</h2>
+            <p>
+              Zënter dem Update 17.4 vun iOS an iPadOS kann een duerch
+              Ännerungen vun Apple net méi PWA verlinkungen op dem
+              Springboard/Homescreen hunn. Dëst ass keng limitéierung vu
+              Luxformel mä eng Äntwert op d'EU-Richtlinn vum "Digital Markets
+              Act (DMA)".
+            </p>
+
             <article class="borderInstall">
               <h2>
-                Wéi installéieren ech luxformel op engem Handy oder Tablett?
+                Wéi kann ech e Shortcut an de Springboard/Homescreen vu mengem
+                Hand oder Tablett kréien?
               </h2>
               <div class="hello">
                 <p>
-                  Luxformel ze installéieren ass ganz einfach! Dréckt einfach
-                  ënnen op den Share-Knäppchen de bei ierch am Browser misst
-                  ugewise ginn. Ënnem am Bild ass gewisen wou sech de Knäppche
-                  verstoppt am Safari Browser op engem iPhone, mä all OS oder
-                  Handy, Tablett misst mat der Method kompatibel sinn.
+                  Luxformel ze verlinken ass ganz einfach! Dréckt einfach ënnen
+                  op den Share-Knäppchen de bei ierch am Browser misst ugewise
+                  ginn. Ënnem am Bild ass gewisen wou sech de Knäppche verstoppt
+                  am Safari Browser op engem iPhone, mä all OS oder Handy,
+                  Tablett misst mat der Method kompatibel sinn.
                 </p>
                 <img
                   src="PWA/pwaTutorial/phoneTutorial1.png"
@@ -166,7 +176,7 @@
                   class="tutorial"
                 />
                 <p>
-                  Wann der op den Share-Knäppchen gedréckt hutt misst de
+                  Wann der op de Share-Knäppchen gedréckt hutt misst de
                   Share-Dialog opdauchen. Hei dréckt der
                   <q>Add to Home Screen</q> oder änlech genannte Funktiounen.
                 </p>
@@ -186,8 +196,7 @@
                   class="tutorial"
                 />
                 <p>
-                  D'luxformel PWA misst elo gedownload sinn. Dir kennt elo
-                  luxformel ouni Browser benotzen.
+                  Luxformel ass elo op Ärem Springboard/Homescreen verlinkt.
                 </p>
               </div>
             </article>
@@ -202,7 +211,7 @@
         Designed by: <br />
         Niederkorn Damon <br />
         <br />
-        E-mail: <br />
+        Email: <br />
         feedback@luxformel.info
       </p>
     </footer>
